tests/rosetta/out/Smalltalk/bitcoin-address-validation.out
/tmp/bitcoin-address-validation.st:5: parse error, expected ']'
