tests/rosetta/out/Smalltalk/bitcoin-address-validation.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| indexOf i set58 tmpl a idx ch c j doubleSHA256 first computeChecksum hash validA58 sum |
indexOf := [:s :ch | i := 0.
[(i < ((s size)))] whileTrue: [.
(((s copyFrom: (i + 1) to: (i + 1)) = ch)) ifTrue: [
i.
] .
i := (i + 1).
].
.
-1. ].
set58 := [:addr | tmpl := '123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz'.
a := {}.
i := 0.
[(i < 25)] whileTrue: [.
a := a copyWith: 0.
i := (i + 1).
].
.
idx := 0.
[(idx < ((addr size)))] whileTrue: [.
ch := addr copyFrom: (idx + 1) to: (idx + 1).
c := indexOf value: tmpl value: ch.
((c < 0)) ifTrue: [
{}.
] .
j := 24.
[(j >= 0)] whileTrue: [.
c := (c + ((58 * (a at: j)))).
a at: j put: (c % 256).
c := (c / 256) asInteger.
j := (j - 1).
].
.
((c > 0)) ifTrue: [
{}.
] .
idx := (idx + 1).
].
.
a. ].
doubleSHA256 := [:bs | first := sha256 value: bs.
sha256 value: first. ].
computeChecksum := [:a | hash := doubleSHA256 value: a copyFrom: (0 + 1) to: 21.
hash copyFrom: (0 + 1) to: 4. ].
validA58 := [:addr | a := set58 value: addr.
((((a size)) ~= 25)) ifTrue: [
false.
] .
(((a at: 0) ~= 0)) ifTrue: [
false.
] .
sum := computeChecksum value: a.
i := 0.
[(i < 4)] whileTrue: [.
(((a at: (21 + i)) ~= (sum at: i))) ifTrue: [
false.
] .
i := (i + 1).
].
.
true. ].
Transcript show: ((validA58 value: '1AGNa15ZQXAZUgFiqJ3i7Z2DPU2J6hW62i' asString)) printString; cr.
Transcript show: ((validA58 value: '17NdbrSGoUotzeGCcMMCqnFkEvLymoou9j' asString)) printString; cr.
